@@ -1,13 +1,19 @@
 --- #YAML:1.0
-name:                E-Mail-Acme
-version:             1349
-abstract:            ~
-license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.32
-distribution_type:   module
-requires:     
-meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+name:               E-Mail-Acme
+version:            1505
+abstract:           ~
 author:
     - Ricardo SIGNES <rjbs@cpan.org >
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:  {}
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
