@@ -1,5 +1,8 @@
 Revision history for E'Mail-Acme
 
+1505    2008-12-01
+        unbreak abstract adapter
+
 1349    2007-07-28
         various fixes required for 5.6 compat (how bizarre they were!)
         add Email::Abstract adapter, for dealing with stupider mail modules
